<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.quotecc.cabfare.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/header"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/oTitle"
                android:layout_below="@id/header"
                android:text="@string/oTitle"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/oTitle"
                android:hint="@string/add"
                android:id="@+id/oAddress" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/oCity"
                android:layout_below="@id/oAddress"
                android:hint="@string/city"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/oState"
                android:layout_below="@id/oCity"
                android:hint="@string/state"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dTitle"
                android:layout_below="@id/oState"
                android:text="@string/dTitle"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dTitle"
                android:hint="@string/add"
                android:id="@+id/dAddress" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dCity"
                android:layout_below="@id/dAddress"
                android:hint="@string/city"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dState"
                android:layout_below="@id/dCity"
                android:hint="@string/state"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dState"
                android:entries="@array/spinnerOpts"
                android:id="@+id/spnr"
                android:prompt="@string/prmpt"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bttn"
                android:layout_below="@id/spnr"
                android:text="@string/bttnTxt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:visibility="gone"
                android:layout_below="@id/dState"
                android:layout_marginTop="50sp"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
